# devfolder-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: 01-plan.md  02-poc-complete.md  03-code-review.md  03-tests.md  CODING-STYLE.md  json-output.md
src/devfolder/: __init__.py  classifier.py  cli.py  config.py  git.py  inspector.py  models.py  output.py  report.py  scanner.py  serializers.py
tests/: conftest.py  test_classifier.py  test_config.py  test_git.py  test_inspector.py  test_main.py  test_output.py  test_report.py  test_scanner.py  test_serializers.py
