[project]
name = "devfolder"
version = "0.3.0"
description = "A CLI tool to scan and categorize local development projects"
readme = "README.md"
authors = [
    { name = "Adam Jackson", email = "vcs@ahejackson.dev" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
devfolder = "devfolder:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
warn_unreachable = true
warn_return_any = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
